--- a/__site/index.html
+++ b/__site/index.html
@@ -50,6 +50,7 @@
         <li class="menu-list-item "><a href="/enve160b/session2/" class="menu-list-link ">2. Exposure</a>
         <li class="menu-list-item "><a href="/enve160b/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
         <li class="menu-list-item "><a href="/enve160b/magic/" class="menu-list-link ">4. PN & O3</a>
+        <li class="menu-list-item "><a href="/enve160b/chamber/" class="menu-list-link ">5. Ozonolysis</a>
       </ul>
     </div>
     <div class="footer">
@@ -106,8 +107,8 @@
 <p>The grade components in the class include:</p>
 <table><tr><th align="right">Activity</th><th align="right">Weight</th><th align="right">Details</th></tr><tr><td align="right">Laboratory Reports</td><td align="right">50&#37;</td><td align="right">Five &#40;5&#41; laboratory reports.</td></tr><tr><td align="right">Presentations</td><td align="right">30&#37;</td><td align="right">Two &#40;2&#41; group presentations.</td></tr><tr><td align="right">Participation</td><td align="right">20&#37;</td><td align="right">Attendance and participation.</td></tr></table>
 <p><strong>Laboratory Reports</strong> Each group will turn in a report for each of the five labs that summarizes the experimental design and results. The grade assigned to each student will be based on a rubric that includes quality of the data and report and will be weighted based on individual contribution to the lab and report. Spelling, grammar, and general writing style will be considered when grading the reports. Reports will be due on Fridays at 11:59 pm at the end of the weeks specified in the schedule below. You can choose which report to submit each week; you do not need to submit reports in the same order in which you did the labs. The electronic submissions must be formatted into single documents, preferably a google doc shared with write access. Reports must be submitted by each group member through Canvas. </p>
-<p><strong>Presentations</strong> Each student will be required to contribute to group presentations on results from two of the five labs. Each group will get to decide which two labs to present. An objective of these is to help students place their results into context by comparing and contrasting with those from the other groups. I will consider responses to questions from me and other students in the class when grading. I will randomly call on three students not presenting to ask questions after each talk. Lack of preparation or absence will be considered when assigning grades. The presentations will be given both during the discussion classes and in class at the end of the quarter.</p>
-<p><strong>Participation</strong> I will schedule meetings with each group during weeks for which you are not fully occupied with a lab. We will use this time to discuss your expectations and hypotheses for upcoming labs and your findings and analysis for completed labs. Your participation in the meetings and in other discussions in lab will be counted as 20&#37; of your course grade. Groups cannot start a lab until all members are either present or have sent me an email explaining that they will be unable to attend lab that day.</p>
+<p><strong>Presentations</strong> Each student will be required to contribute to group presentations on results from two of the five labs. Present any two labs of your choice. One objective is to help students place their results into context by comparing and contrasting with those from other groups.</p>
+<p><strong>Participation</strong> Attendance in lab sessions and discussion is mandatory. Lab sessions marked as as make-up/group work are available for meetings of the groups with the instructor to discuss expectations and hypotheses for upcoming labs and findings and analysis for completed labs. Participation in the meetings and in other discussions in lab contributes  20&#37; of your course grade. The participation score will be computed based on recorded attendance, participation in discussion, and peer-evaluations of group work. </p>
 <p><strong>Late Homework</strong> Late submissions will receive no credit. An extension with partial credit <em>may</em> be granted if the student can document extenuating circumstances related to an extensive period of excused absence between the date that the homework assigned and the due date. In addition, <em>religious observances</em> or other <em>unanticipated life events</em> may interfere with class attendance and homework submission. These <em>may</em> qualify for an extension, provided sufficient documentation is presented. </p>
 <p><strong>Definition of Letter Grades</strong></p>
 <p>This Course uses Letter Grading: A&#43;, A, A-, B&#43;, B, B-, C&#43;, C, C-, D&#43;, D, D-, F, I, W. Grading policies follow <a href="https://senate.ucr.edu/regulations/section/513/01">UCR Regulations</a>., Letter grades are defined as follows:</p>
@@ -190,6 +191,8 @@
 <p><em>Digital Course Components:</em> Digital course components include </p>
 <ul>
 <li><p>Canvas Learning Management System</p>
+</li>
+<li><p>Poll Everywhere</p>
 </li>
 </ul>
 <h4 id="non-discrimination_policy"><a href="#non-discrimination_policy" class="header-anchor">Non-Discrimination Policy</a></h4>
