--- a/__site/presentations/index.html
+++ b/__site/presentations/index.html
@@ -50,6 +50,7 @@
         <li class="menu-list-item "><a href="/enve160b/session2/" class="menu-list-link ">2. Exposure</a>
         <li class="menu-list-item "><a href="/enve160b/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
         <li class="menu-list-item "><a href="/enve160b/magic/" class="menu-list-link ">4. PN & O3</a>
+        <li class="menu-list-item "><a href="/enve160b/chamber/" class="menu-list-link ">5. Ozonolysis</a>
       </ul>
     </div>
     <div class="footer">
@@ -70,15 +71,15 @@
 <p>Students will be graded as a group, rather than individually to simulate team environments in real-world contexts. Google forms using the rubric below will be filled out by all instructors. I will assign a mastery-based grade at the end of the quarter, taking in to account all submitted scores, as well as the group peer-evaluation forms submitted with the presentation.</p>
 <h2 id="helpful_hints"><a href="#helpful_hints" class="header-anchor">Helpful Hints</a></h2>
 
-<iframe width="426" height="240" src="https://www.youtube.com/embed/Hp7Id3Yb9XQ
+<iframe width="370" height="208" src="https://www.youtube.com/embed/Hp7Id3Yb9XQ
 " title="AP Aerosol Introduction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br> <br>
 
 
-<iframe width="426" height="240" src="https://www.youtube.com/embed/vagJObbPpXI" title="AP Aerosol Introduction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br> <br>
+<iframe width="370" height="208" src="https://www.youtube.com/embed/vagJObbPpXI" title="AP Aerosol Introduction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br> <br>
 
 <h2 id="rubric"><a href="#rubric" class="header-anchor">Rubric</a></h2>
 
-<iframe src="https://docs.google.com/forms/d/19JY4EEEGw1dJQ--SkN-USWTAXldSJFgH_XrQDv4hq4Q/viewform?embedded=true" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/19JY4EEEGw1dJQ--SkN-USWTAXldSJFgH_XrQDv4hq4Q/viewform?embedded=true" width="600" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 <div class="page-foot">
     <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> Markus Petters</a>.
