--- a/__site/index.html
+++ b/__site/index.html
@@ -14,8 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/enve160b/css/jtd.css">
-<link rel="icon" href="/enve160b/assets/favicon.ico">
+  <link rel="stylesheet" href="/css/jtd.css">
+<link rel="icon" href="/assets/favicon.ico">
 
 <style>
   /* #148 wrap long header */
@@ -34,7 +34,7 @@
   <!-- SIDE BAR -->
   <div class="side-bar">
     <div class="header">
-      <a href="/enve160b/" class="title">
+      <a href="/" class="title">
         ENVE-160B
       </a>
     </div>
@@ -42,15 +42,15 @@
     <input type="checkbox" id="show-menu" role="button">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
-        <li class="menu-list-item active"><a href="/enve160b/" class="menu-list-link active">Syllabus</a>
-        <li class="menu-list-item "><a href="/enve160b/labreport/" class="menu-list-link ">Reports</a>
-        <li class="menu-list-item "><a href="/enve160b/presentations/" class="menu-list-link ">Presentations</a>
-        <li class="menu-list-item "><a href="/enve160b/evaluation/" class="menu-list-link ">Peer Evaluation</a>
-        <li class="menu-list-item "><a href="/enve160b/session1/" class="menu-list-link ">1. Sunphotometer</a>
-        <li class="menu-list-item "><a href="/enve160b/session2/" class="menu-list-link ">2. Exposure</a>
-        <li class="menu-list-item "><a href="/enve160b/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
-        <li class="menu-list-item "><a href="/enve160b/magic/" class="menu-list-link ">4. PN & O3</a>
-        <li class="menu-list-item "><a href="/enve160b/chamber/" class="menu-list-link ">5. Ozonolysis</a>
+        <li class="menu-list-item active"><a href="/" class="menu-list-link active">Syllabus</a>
+        <li class="menu-list-item "><a href="/labreport/" class="menu-list-link ">Reports</a>
+        <li class="menu-list-item "><a href="/presentations/" class="menu-list-link ">Presentations</a>
+        <li class="menu-list-item "><a href="/evaluation/" class="menu-list-link ">Peer Evaluation</a>
+        <li class="menu-list-item "><a href="/session1/" class="menu-list-link ">1. Sunphotometer</a>
+        <li class="menu-list-item "><a href="/session2/" class="menu-list-link ">2. Exposure</a>
+        <li class="menu-list-item "><a href="/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
+        <li class="menu-list-item "><a href="/magic/" class="menu-list-link ">4. PN & O3</a>
+        <li class="menu-list-item "><a href="/chamber/" class="menu-list-link ">5. Ozonolysis</a>
       </ul>
     </div>
     <div class="footer">
@@ -181,9 +181,9 @@
 </li>
 <li><p>Permitting another individual to substitute for one’s self in an academic evaluation.</p>
 </li>
-<li><p>Marking or submitting an examination or evaluation material in a manner designed to deceive the grading system,</p>
+<li><p>Marking or submitting an examination or evaluation material in a manner designed to deceive the grading system.</p>
 </li>
-<li><p>Failing to comply with a specific condition of academic integrity which has been clearly announced in a particular course,</p>
+<li><p>Failing to comply with a specific condition of academic integrity which has been clearly announced in a particular course.</p>
 </li>
 <li><p>Submitting, without prior permission of the faculty member, any work by a student which has at any time been submitted in identical or similar form by that student in fulfillment of any other academic requirement at any institution.</p>
 </li>
