--- a/__site/refresher/index.html
+++ b/__site/refresher/index.html
@@ -27,7 +27,7 @@
   }
 </style>
 
-   <title>404</title>  
+   <title>Air Quality Refresher</title>  
 </head>
 <body>                      <!-- closed in foot.html -->
 <div class="page-wrap">   <!-- closed in foot.html -->
@@ -46,7 +46,7 @@
         <li class="menu-list-item "><a href="/enve160b/labreport/" class="menu-list-link ">Reports</a>
         <li class="menu-list-item "><a href="/enve160b/presentations/" class="menu-list-link ">Presentations</a>
         <li class="menu-list-item "><a href="/enve160b/evaluation/" class="menu-list-link ">Peer Evaluation</a>
-        <li class="menu-list-item "><a href="/enve160b/refresher/" class="menu-list-link ">Refresher</a>
+        <li class="menu-list-item active"><a href="/enve160b/refresher/" class="menu-list-link ">Refresher</a>
         <li class="menu-list-item "><a href="/enve160b/session1/" class="menu-list-link ">1. Sunphotometer</a>
         <li class="menu-list-item "><a href="/enve160b/session2/" class="menu-list-link ">2. Exposure</a>
         <li class="menu-list-item "><a href="/enve160b/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
@@ -68,31 +68,16 @@
 
 
 <!-- Content appended here (in class franklin-content) -->
-<div class="franklin-content">
-<div style="margin-top: 40px; font-size: 40px; text-align: center;">
+<div class="franklin-content"><h1 id="air_quality_refresher"><a href="#air_quality_refresher" class="header-anchor">Air Quality Refresher</a></h1>
+<p>Reviews the origin, temporal, and spatial distribution of criteria pollutants in the United States and Southern California.</p>
+<h2 id="slides_and_lecture_notes"><a href="#slides_and_lecture_notes" class="header-anchor">Slides and Lecture Notes</a></h2>
 
-  <br>
+Slide Deck: <a href="https://docs.google.com/presentation/d/1PJGlCqL3XkVluh1ZtjDrtL6Wts-7w8hutQsHf0oze0o/edit?usp=sharing"> link</a>
 
-  <div style="font-weight: bold;">
-    404
-  </div>
-
-  <br>
-  <br>
-
-    The requested page was not found
-
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div style="margin-bottom: 300px; font-size: 24px">
-    <a href="/enve160b/">Click here</a> to go back to the homepage.
-  </div>
-
-</div>
-
+<h2 id="resources"><a href="#resources" class="header-anchor">Resources</a></h2>
+<p>Mates V Final Report <a href="https://www.aqmd.gov/docs/default-source/planning/mates-v/mates-v-final-report-9-24-21.pdf">&#40;link&#41;</a></p>
+<p>MATES Data Display <a href="https://experience.arcgis.com/experience/79d3b6304912414bb21ebdde80100b23/">&#40;link&#41;</a></p>
+<p>EPA Green Book <a href="https://www.epa.gov/green-book/green-book-map-download">&#40;link&#41;</a></p>
 <div class="page-foot">
     <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> Don Collins, David Cocker, and Markus Petters</a>.
 </div>
