--- a/__site/index.html
+++ b/__site/index.html
@@ -14,8 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/css/jtd.css">
-<link rel="icon" href="/assets/favicon.ico">
+  <link rel="stylesheet" href="/enve160b/css/jtd.css">
+<link rel="icon" href="/enve160b/assets/favicon.ico">
 
 <style>
   /* #148 wrap long header */
@@ -34,7 +34,7 @@
   <!-- SIDE BAR -->
   <div class="side-bar">
     <div class="header">
-      <a href="/" class="title">
+      <a href="/enve160b/" class="title">
         ENVE-160B
       </a>
     </div>
@@ -42,15 +42,16 @@
     <input type="checkbox" id="show-menu" role="button">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
-        <li class="menu-list-item active"><a href="/" class="menu-list-link active">Syllabus</a>
-        <li class="menu-list-item "><a href="/labreport/" class="menu-list-link ">Reports</a>
-        <li class="menu-list-item "><a href="/presentations/" class="menu-list-link ">Presentations</a>
-        <li class="menu-list-item "><a href="/evaluation/" class="menu-list-link ">Peer Evaluation</a>
-        <li class="menu-list-item "><a href="/session1/" class="menu-list-link ">1. Sunphotometer</a>
-        <li class="menu-list-item "><a href="/session2/" class="menu-list-link ">2. Exposure</a>
-        <li class="menu-list-item "><a href="/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
-        <li class="menu-list-item "><a href="/magic/" class="menu-list-link ">4. PN & O3</a>
-        <li class="menu-list-item "><a href="/chamber/" class="menu-list-link ">5. Ozonolysis</a>
+        <li class="menu-list-item active"><a href="/enve160b/" class="menu-list-link active">Syllabus</a>
+        <li class="menu-list-item "><a href="/enve160b/labreport/" class="menu-list-link ">Reports</a>
+        <li class="menu-list-item "><a href="/enve160b/presentations/" class="menu-list-link ">Presentations</a>
+        <li class="menu-list-item "><a href="/enve160b/evaluation/" class="menu-list-link ">Peer Evaluation</a>
+        <li class="menu-list-item "><a href="/enve160b/refresher/" class="menu-list-link ">Refresher</a>
+        <li class="menu-list-item "><a href="/enve160b/session1/" class="menu-list-link ">1. Sunphotometer</a>
+        <li class="menu-list-item "><a href="/enve160b/session2/" class="menu-list-link ">2. Exposure</a>
+        <li class="menu-list-item "><a href="/enve160b/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
+        <li class="menu-list-item "><a href="/enve160b/magic/" class="menu-list-link ">4. PN & O3</a>
+        <li class="menu-list-item "><a href="/enve160b/chamber/" class="menu-list-link ">5. Ozonolysis</a>
       </ul>
     </div>
     <div class="footer">
@@ -74,9 +75,8 @@
 <p>Chemical and Environmental Engineering</p>
 <h4 id="course_instructors"><a href="#course_instructors" class="header-anchor">Course Instructors</a></h4>
 <p>Markus Petters, Department of Chemical and Environmental Engineering <br/> Office: Center for Environmental Research &amp; Technology of UCR | Room 128 <br/> Web: <a href="https://mdpetters.github.io">https://mdpetters.github.io</a> <br/> Email: <a href="mailto:markus.petters@ucr.edu">markus.petters@ucr.edu</a> <br/> Office Hours: F 4:00-4:50 PM  </p>
-<p><em>Lab Director</em><br/> Kathy Cocker, Department of Chemical and Environmental Engineering <br/> Email: <a href="mailto:kathalena.cocker@ucr.edu">kathalena.cocker@ucr.edu</a></p>
-<p><em>Teaching Assistants</em><br/> First, Last <br/> Email: <a href="mailto:">@ucr.edu</a></p>
-<p>First, Last <br/> Email: <a href="mailto:">@ucr.edu</a></p>
+<p><em>Lab Director</em><br/> Kathy Cocker, Department of Chemical and Environmental Engineering <br/> Email: <a href="mailto:ksmihula@engr.ucr.edu">ksmihula@engr.ucr.edu</a></p>
+<p><em>Teaching Assistants</em><br/> Sunandan Mahant <br/> Email: <a href="mailto:sunandan.mahant@email.ucr.edu ">sunandan.mahant@email.ucr.edu</a></p>
 <h4 id="course_description"><a href="#course_description" class="header-anchor">Course Description</a></h4>
 <p>Consists of laboratory exercises in environmental engineering. Includes experiments in physical measurements, reaction kinetics, reactor analysis, and air pollution engineering. Emphasizes experimental design, analysis of results, and preparation of engineering reports.</p>
 <p>Prerequisite&#40;s&#41;: ENVE 133; or consent of instructor.</p>
@@ -105,7 +105,7 @@
 <p>The Accreditation Board for Engineering and Technology &#40;ABET&#41; articulates critical student outcomes that support the program educational objectives. Attainment of these outcomes prepares graduates to enter the professional practice of engineering. The table below summarizes how this course meets various ABET targets.</p>
 <table><tr><th align="right"></th><th align="right">ABET Criteria</th><th align="right">This Course</th></tr><tr><td align="right">1.</td><td align="right">An ability to identify, formulate, and solve complex engineering problems by applying principles of engineering, science, and mathematics.</td><td align="right">Open-ended prompts and requirement to engage with the peer-reviewed literature force students to identify, formulate and solve complex engineering problems in the context of engineering science and mathematics.</td></tr><tr><td align="right">2.</td><td align="right">An ability to apply engineering design to produce solutions that meet specified needs with consideration of public health, safety, and welfare, as well as global, cultural, social, environmental, and economic factors.</td><td align="right">Students design and carry out experiments that target public health and environmental welfare.</td></tr><tr><td align="right">3.</td><td align="right">An ability to communicate effectively with a range of audiences.</td><td align="right">Students learn to communicate findings via oral and written reports that meet current professional standards. Students learn to participate in active discussions with peers and an audience.</td></tr><tr><td align="right">4.</td><td align="right">An ability to function effectively on a team whose members together provide leadership, create a collaborative and inclusive environment, establish goals, plan tasks, and meet objectives.</td><td align="right">Students learn to effectively collaborate in a team, be accountable as both individuals and as a group for produced results.</td></tr><tr><td align="right">5.</td><td align="right">An ability to develop and conduct appropriate experimentation, analyze and interpret data, and use engineering judgment to draw conclusions.</td><td align="right">Students learn how to conduct hand-on experiments through multiple labs. They analyze and interpret the data and are required to draw conclusions from the data in presentations and reports.</td></tr><tr><td align="right">6.</td><td align="right">An ability to acquire and apply new knowledge as needed, using appropriate learning strategies.</td><td align="right">Students are provided lab manuals, auxiliary data websites, and peer-reviewed manuscripts as a guide. They are required to acquire and apply this knowledge using their own learning strategies.</td></tr></table>
 <h4 id="course_schedule"><a href="#course_schedule" class="header-anchor">Course Schedule</a></h4>
-<table><tr><th align="right">M</th><th align="right">Activity</th><th align="right">W</th><th align="right">Activity</th><th align="right">F</th><th align="right">Activity</th><th align="right">Report Due</th></tr><tr><td align="right"></td><td align="right"></td><td align="right">Sep 26</td><td align="right"></td><td align="right">Sep 27</td><td align="right">Syllabus</td><td align="right"></td></tr><tr><td align="right">Nov 30</td><td align="right">Lab 1</td><td align="right">Oct 2</td><td align="right">Lab 1</td><td align="right">Oct 4</td><td align="right"></td><td align="right"></td></tr><tr><td align="right">Oct 7</td><td align="right">Lab 2</td><td align="right">Oct 9</td><td align="right">Lab 2</td><td align="right">Oct 11</td><td align="right"></td><td align="right"></td></tr><tr><td align="right">Oct 14</td><td align="right">Lab 3</td><td align="right">Oct 16</td><td align="right">Lab 3</td><td align="right">Oct 18</td><td align="right"></td><td align="right">Report #1</td></tr><tr><td align="right">Oct 21</td><td align="right">Lab 4</td><td align="right">Oct 23</td><td align="right">Lab 4</td><td align="right">Oct 25</td><td align="right">Presentations Groups 1,2</td><td align="right"></td></tr><tr><td align="right">Oct 28</td><td align="right">Lab 5</td><td align="right">Oct 30</td><td align="right">Lab 5</td><td align="right">Nov 1</td><td align="right"></td><td align="right">Report #2</td></tr><tr><td align="right">Nov 4</td><td align="right">Make-up/group work</td><td align="right">Nov 6</td><td align="right">Make-up/group work</td><td align="right">Nov 8</td><td align="right">Presentations Groups 3,4</td><td align="right"></td></tr><tr><td align="right">Nov 11</td><td align="right"><em>Veterans Day</em></td><td align="right">Nov 13</td><td align="right">Make-up/group work</td><td align="right">Nov 15</td><td align="right">Presentations Groups 1,5</td><td align="right">Report #3</td></tr><tr><td align="right">Nov 18</td><td align="right">Make-up/group work</td><td align="right">Nov 20</td><td align="right">Make-up/group work</td><td align="right">Nov 22</td><td align="right">Presentations Groups 2,3</td><td align="right">Report #4</td></tr><tr><td align="right">Nov 25</td><td align="right">Make-up/group work</td><td align="right">Nov 27</td><td align="right">Make-up/group work</td><td align="right">Nov 29</td><td align="right"><em>Thanksgiving break</em></td><td align="right"></td></tr><tr><td align="right">Dec 2</td><td align="right">Make-up/group work</td><td align="right">Dec 4</td><td align="right">Make-up/group work</td><td align="right">Dec 6</td><td align="right">Presentations Groups 4,5</td><td align="right">Report #5</td></tr></table>
+<table><tr><th align="right">M</th><th align="right">Activity</th><th align="right">W</th><th align="right">Activity</th><th align="right">F</th><th align="right">Activity</th><th align="right">Report Due</th></tr><tr><td align="right"></td><td align="right"></td><td align="right">Sep 26</td><td align="right"></td><td align="right">Sep 27</td><td align="right">Syllabus</td><td align="right"></td></tr><tr><td align="right">Nov 30</td><td align="right">Lab 1</td><td align="right">Oct 2</td><td align="right">Lab 1</td><td align="right">Oct 4</td><td align="right">Air Quality Refresher</td><td align="right"></td></tr><tr><td align="right">Oct 7</td><td align="right">Lab 2</td><td align="right">Oct 9</td><td align="right">Lab 2</td><td align="right">Oct 11</td><td align="right"></td><td align="right"></td></tr><tr><td align="right">Oct 14</td><td align="right">Lab 3</td><td align="right">Oct 16</td><td align="right">Lab 3</td><td align="right">Oct 18</td><td align="right"></td><td align="right">Report #1</td></tr><tr><td align="right">Oct 21</td><td align="right">Lab 4</td><td align="right">Oct 23</td><td align="right">Lab 4</td><td align="right">Oct 25</td><td align="right">Presentations Groups 1,2</td><td align="right"></td></tr><tr><td align="right">Oct 28</td><td align="right">Lab 5</td><td align="right">Oct 30</td><td align="right">Lab 5</td><td align="right">Nov 1</td><td align="right"></td><td align="right">Report #2</td></tr><tr><td align="right">Nov 4</td><td align="right">Make-up/group work</td><td align="right">Nov 6</td><td align="right">Make-up/group work</td><td align="right">Nov 8</td><td align="right">Presentations Groups 3,4</td><td align="right"></td></tr><tr><td align="right">Nov 11</td><td align="right"><em>Veterans Day</em></td><td align="right">Nov 13</td><td align="right">Make-up/group work</td><td align="right">Nov 15</td><td align="right">Presentations Groups 1,5</td><td align="right">Report #3</td></tr><tr><td align="right">Nov 18</td><td align="right">Make-up/group work</td><td align="right">Nov 20</td><td align="right">Make-up/group work</td><td align="right">Nov 22</td><td align="right">Presentations Groups 2,3</td><td align="right">Report #4</td></tr><tr><td align="right">Nov 25</td><td align="right">Make-up/group work</td><td align="right">Nov 27</td><td align="right">Make-up/group work</td><td align="right">Nov 29</td><td align="right"><em>Thanksgiving break</em></td><td align="right"></td></tr><tr><td align="right">Dec 2</td><td align="right">Make-up/group work</td><td align="right">Dec 4</td><td align="right">Make-up/group work</td><td align="right">Dec 6</td><td align="right">Presentations Groups 4,5</td><td align="right">Report #5</td></tr></table>
 <h4 id="group_schedule"><a href="#group_schedule" class="header-anchor">Group Schedule</a></h4>
 <p>You will rotate through Labs 1 through 5 according to the schedule below. Please see Canvas for your group assignments.</p>
 <table><tr><th align="right">Group</th><th align="right">Nov 30</th><th align="right">Oct 7</th><th align="right">Oct 14</th><th align="right">Oct 21</th><th align="right">Oct 28</th></tr><tr><td align="right">Group 1</td><td align="right">Lab 1</td><td align="right">Lab 2</td><td align="right">Lab 3</td><td align="right">Lab 4</td><td align="right">Lab 5</td></tr><tr><td align="right">Group 2</td><td align="right">Lab 5</td><td align="right">Lab 1</td><td align="right">Lab 2</td><td align="right">Lab 3</td><td align="right">Lab 4</td></tr><tr><td align="right">Group 3</td><td align="right">Lab 4</td><td align="right">Lab 5</td><td align="right">Lab 1</td><td align="right">Lab 2</td><td align="right">Lab 3</td></tr><tr><td align="right">Group 4</td><td align="right">Lab 3</td><td align="right">Lab 4</td><td align="right">Lab 5</td><td align="right">Lab 1</td><td align="right">Lab 2</td></tr><tr><td align="right">Group 5</td><td align="right">Lab 2</td><td align="right">Lab 3</td><td align="right">Lab 4</td><td align="right">Lab 5</td><td align="right">Lab 1</td></tr></table>
@@ -261,7 +261,7 @@
 </li>
 </ul>
 <div class="page-foot">
-    <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> Markus Petters</a>.
+    <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> Don Collins, David Cocker, and Markus Petters</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
