--- a/__site/presentations/index.html
+++ b/__site/presentations/index.html
@@ -46,6 +46,7 @@
         <li class="menu-list-item "><a href="/enve160b/labreport/" class="menu-list-link ">Reports</a>
         <li class="menu-list-item active"><a href="/enve160b/presentations/" class="menu-list-link ">Presentations</a>
         <li class="menu-list-item "><a href="/enve160b/evaluation/" class="menu-list-link ">Peer Evaluation</a>
+        <li class="menu-list-item "><a href="/enve160b/refresher/" class="menu-list-link ">Refresher</a>
         <li class="menu-list-item "><a href="/enve160b/session1/" class="menu-list-link ">1. Sunphotometer</a>
         <li class="menu-list-item "><a href="/enve160b/session2/" class="menu-list-link ">2. Exposure</a>
         <li class="menu-list-item "><a href="/enve160b/carbonyl/" class="menu-list-link ">3. Carbonyls</a>
@@ -82,7 +83,7 @@
 <iframe src="https://docs.google.com/forms/d/19JY4EEEGw1dJQ--SkN-USWTAXldSJFgH_XrQDv4hq4Q/viewform?embedded=true" width="600" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 <div class="page-foot">
-    <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> Markus Petters</a>.
+    <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> Don Collins, David Cocker, and Markus Petters</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
